--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       height: 100vh;
-      background: url('Screenshot 2025-04-04 at 1.05.50 AM.png') no-repeat center center/cover;
+      background: url('mommy-bg.png') no-repeat center center/cover;
       display: flex;
       align-items: center;
       justify-content: flex-end;
