--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       height: 100vh;
-      background: url('mommy-bg.png') no-repeat center center/cover;
+      background: url('clean-mommy-bg.png') no-repeat center center/cover;
       display: flex;
       align-items: center;
       justify-content: flex-end;
@@ -56,14 +56,12 @@
       background-color: #e0a800;
     }
 
-    /* ✅ Mobile responsive styles */
     @media (max-width: 768px) {
-  body {
-    flex-direction: column;
-    justify-content: center;
-    padding: 1rem;
-  }
-
+      body {
+        flex-direction: column;
+        justify-content: center;
+        padding: 1rem;
+      }
 
       .content {
         margin-right: 0;
