--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hey Mom!</title>
-  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       margin: 0;
@@ -24,6 +23,7 @@
       margin-right: 5%;
       text-align: left;
       border-radius: 2rem;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
     }
 
     .content h1 {
